--- a/config-data/microservice-account.yml
+++ b/config-data/microservice-account.yml
@@ -2,5 +2,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://cescmongo:Cescasdqwe123$.@cluster0.v5hnddb.mongodb.net/account?retryWrites=true&w=majority
-
+      uri: mongodb+srv://cescmongo:Cescasdqwe123$.@cluster0.v5hnddb.mongodb.net/banca?retryWrites=true&w=majority
