--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -19,7 +19,7 @@ spring:
       ribbon:
         enabled: 'false'
   application:
-    name: microservicio-gateway
+    name: microservice-gateway
 
 server:
   port: '8090'
