--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -17,7 +17,7 @@ spring:
           enabled: 'true'
     loadbalancer:
       ribbon:
-        enabled: 'false'
+        enabled: 'true'
   application:
     name: microservice-gateway
 
