--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -1,23 +1,22 @@
 spring:
   cloud:
     gateway:
-#      routes[0]:
-#        id: microservicio-activo-personal
-#        predicates: Path=/api/activo/personal/**
-#        filters: StripPrefix=3
-#        uri: lb://microservicio-activo-personal
       routes[0]:
         id: microservice-product
         predicates: Path=/api/**
         filters: StripPrefix=1
         uri: lb://microservice-product
- 
+#      routes[0]:
+#        id: microservicio-activo-personal
+#        predicates: Path=/api/activo/personal/**
+#        filters: StripPrefix=3
+#        uri: lb://microservicio-activo-personal
       discovery:
         locator:
           enabled: 'true'
     loadbalancer:
       ribbon:
-        enabled: 'true'
+        enabled: 'false'
   application:
     name: microservice-gateway
 
