--- a/config-data/microservice-eureka-server.yml
+++ b/config-data/microservice-eureka-server.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8761
+  port: '8761'
 eureka:
   instance:
     hostname: localhost
@@ -7,4 +7,4 @@ eureka:
     fetch-registry: 'false'
     register-with-eureka: 'false'
     service-url:
-      default-zone: http://${eureka.instance.hostname}:${server.port}
+      default-zone: http://${eureka.instance.hostname}:${server.port}/eureka/
