--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -24,9 +24,10 @@ spring:
               uri: lb://microservice-product
 #              uri: http://localhost:9090
               predicates:
-                - Path=/**
+                - Path=/api/**
               filters:
                 - RewritePath=/api/(?<x>.*), /$\{x}
+                - StripPrefix=1
 #spring:
 #  cloud:
 #    gateway:
