--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -21,7 +21,7 @@ spring:
             enabled: true
           routes:
             - id: microservice-product
-              uri: lb://microservice-product/
+              uri: lb://MICROSERVICE-PRODUCT/
 #              uri: http://localhost:9090
               predicates:
                 - Path=/api/**
