--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -31,11 +31,13 @@
 spring:
   cloud:
     gateway:
-      routes:
-      id: microservice-product
-      uri: lb:// microservice-product
-      predicates: Path=/api/**
-      filters: StripPrefix=1
+      routes[0]:
+        id: microservice-product
+#        predicates: Path=/api/activo/personal/**
+        predicates: Path=/api/**
+        filters: StripPrefix=1
+        uri: lb://microservice-product
+
       discovery:
         locator:
           enabled: 'true'
@@ -56,3 +58,5 @@ eureka:
     register-with-eureka: 'true'
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
