--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -34,7 +34,7 @@ spring:
       routes[0]:
         id: microservice-product
 #        predicates: Path=/api/activo/personal/**
-        predicates: Path=/api/products/**
+        predicates: Path=/api/**
         filters: StripPrefix=1
         uri: lb://microservice-product
 
