--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -37,6 +37,11 @@ spring:
         predicates: Path=/api/**
         filters: StripPrefix=1
         uri: lb://microservice-product
+      routes[1]:
+        id: microservice-client
+        predicates: Path=/api/**
+        filters: StripPrefix=1
+        uri: lb://microservice-client
 
       discovery:
         locator:
