--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -8,17 +8,17 @@ spring:
         uri: lb://microservice-product
       routes[1]:
         id: microservice-client
-        predicates: Path=/api/v1**
+        predicates: Path=/api/v1/**
         filters: StripPrefix=2
         uri: lb://microservice-client
       routes[2]:
         id: microservice-transaction
-        predicates: Path=/api/v1**
+        predicates: Path=/api/v1/**
         filters: StripPrefix=2
         uri: lb://microservice-transaction
       routes[3]:
         id: microservice-account
-        predicates: Path=/api/v1**
+        predicates: Path=/api/v1/**
         filters: StripPrefix=2
         uri: lb://microservice-account
       discovery:
