--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -3,23 +3,23 @@ spring:
     gateway:
       routes[0]:
         id: microservice-product
-        predicates: Path=/api/v1/**
-        filters: StripPrefix=2
+        predicates: Path=/api/v1/products/**
+        filters: StripPrefix=3
         uri: lb://microservice-product
       routes[1]:
         id: microservice-client
-        predicates: Path=/api/v1/**
-        filters: StripPrefix=2
+        predicates: Path=/api/v1/clients/**
+        filters: StripPrefix=3
         uri: lb://microservice-client
       routes[2]:
         id: microservice-transaction
-        predicates: Path=/api/v1/**
-        filters: StripPrefix=2
+        predicates: Path=/api/v1/transactions/**
+        filters: StripPrefix=3
         uri: lb://microservice-transaction
       routes[3]:
         id: microservice-account
-        predicates: Path=/api/v1/**
-        filters: StripPrefix=2
+        predicates: Path=/api/v1/accounts/**
+        filters: StripPrefix=3
         uri: lb://microservice-account
       discovery:
         locator:
