--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -21,6 +21,11 @@ spring:
         predicates: Path=/api/v1/accounts/**
         filters: StripPrefix=3
         uri: lb://microservice-account
+      routes[4]:
+          id: microservice-product-client
+          predicates: Path=/api/v1/productsClients/**
+          filters: StripPrefix=3
+          uri: lb://microservice-product-client
       discovery:
         locator:
           enabled: 'true'
