--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -26,6 +26,11 @@ spring:
           predicates: Path=/api/v1/productsClients/**
           filters: StripPrefix=3
           uri: lb://microservice-product-client
+      routes[5]:
+            id: microservice-card
+            predicates: Path=/api/v1/cards/**
+            filters: StripPrefix=3
+            uri: lb://microservice-card
       discovery:
         locator:
           enabled: 'true'
