--- a/config-data/microservice-gateway.yml
+++ b/config-data/microservice-gateway.yml
@@ -36,6 +36,16 @@ spring:
             predicates: Path=/api/v1/yanki/association/**
             filters: StripPrefix=4
             uri: lb://microservice-yanki-association
+      routes[7]:
+            id: microservice-bootcoin-buy
+            predicates: Path=/api/v1/bootcoin/buy/**
+            filters: StripPrefix=4
+            uri: lb://microservice-bootcoin-buy
+      routes[8]:
+            id: microservice-bootcoin-sales
+            predicates: Path=/api/v1/bootcoin/sales/**
+            filters: StripPrefix=4
+            uri: lb://microservice-bootcoin-sales
       discovery:
         locator:
           enabled: 'true'
